# doc/api.yaml
@@ -41,7 +41,7 @@ paths:
                 properties:
                   identifier:
                     type: string
-                    example: "abcdef0123456789"
+                    example: "a35f6dfa-69dc-11ed-a1eb-0242ac120002"
 
   /addphoto:
     post:
@@ -69,6 +69,7 @@ paths:
                   maxLength: 16
                 Id:
                   type: string
+                  example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
                 Text:
                   type: string
@@ -150,21 +151,26 @@ paths:
                 Username:
                   type: string
                   pattern: 'ˆ.*?$'
+                  example: Maria
                   minLength: 3
                   maxLength: 16
                 Id:
                   type: string
+                  example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
                 NewUsername:
                   type: string
                   pattern: 'ˆ.*?$'
+                  example: Maria
                   minLength: 3
                   maxLength: 16
                 Name:
                   type: string
+                  example: Mario
                   pattern: 'ˆ.*?$'
                 Surname:
                   type: string
+                  example: Rossi
                   pattern: 'ˆ.*?$'
         required: true
       responses:
@@ -213,11 +219,13 @@ paths:
               properties:
                 Username:
                   type: string
+                  example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
                 Id:
                   type: string
+                  example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         required: true
       responses:
@@ -247,11 +255,13 @@ paths:
               properties:
                 Username:
                   type: string
+                  example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
                 Id:
                   type: string
+                  example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         required: true
       responses:
@@ -285,11 +295,13 @@ paths:
               properties:
                 Username:
                   type: string
+                  example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
                 Id:
                   type: string
+                  example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         required: true
       responses:
@@ -319,11 +331,13 @@ paths:
               properties:
                 Username:
                   type: string
+                  example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
                 Id:
                   type: string
+                  example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         required: true
       responses:
@@ -338,9 +352,9 @@ paths:
         "404": { $ref: "#/components/responses/NotFound" }
         "500": { $ref: "#/components/responses/InternalServerError" }
 
-  /profile/{Id}/{imageId}:
+  /profile/{Id}/{ImageId}:
     parameters:
-      - $ref: "#components/parameters/IdQuery"
+      - $ref: "#components/parameters/IdParam"
       - $ref: "#components/parameters/ImageIdParam"
     get:
       tags: ["profileImage"]
@@ -359,7 +373,7 @@ paths:
         "404": { $ref: "#/components/responses/NotFound" }
         "500": { $ref: "#/components/responses/InternalServerError" }
 
-  /profile/{Id}/{imageId}/like:
+  /profile/{Id}/{ImageId}/like:
     parameters:
       - $ref: "#components/parameters/IdParam"
       - $ref: "#components/parameters/ImageIdParam"
@@ -379,11 +393,13 @@ paths:
               properties:
                 Username:
                   type: string
+                  example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
                 Id:
                   type: string
+                  example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         required: true
       responses:
@@ -413,11 +429,13 @@ paths:
               properties:
                 Username:
                   type: string
+                  example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
                 Id:
                   type: string
+                  example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
                 Index:
                   type: integer
@@ -435,7 +453,7 @@ paths:
         "404": { $ref: "#/components/responses/NotFound" }
         "500": { $ref: "#/components/responses/InternalServerError" }
 
-  /profile/{Id}/{imageId}/comment:
+  /profile/{Id}/{ImageId}/comment:
     parameters:
       - $ref: "#components/parameters/IdParam"
       - $ref: "#components/parameters/ImageIdParam"
@@ -455,15 +473,18 @@ paths:
               properties:
                 Username:
                   type: string
+                  example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
                 Id:
                   type: string
+                  example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
-                Comments:
+                Content:
                   type: string
                   pattern: 'ˆ.*?$'
+                  example: Comment
                   minLength: 3
                   maxLength: 16
         required: true
@@ -494,11 +515,13 @@ paths:
               properties:
                 Username:
                   type: string
+                  example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
                 Id:
                   type: string
+                  example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
                 Index:
                   type: integer
@@ -591,21 +614,28 @@ components:
       properties:
         Username:
           type: string
+          example: Maria
           pattern: 'ˆ.*?$'
           minLength: 3
           maxLength: 16
         Id:
           type: string
+          example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
           pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         ProfilePictureLocation:
           type: string
+          example: /images/a35f6dfa-69dc-11ed-a1eb-0242ac120002.png
           pattern: '^/images/[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}.png$'
         Name:
           type: string
+          example: Mario
           maxLength: 20
+          minLength: 0
         Surname:
           type: string
+          example: Rossi
           maxLength: 20
+          minLength: 0
         Followers:
           type: integer
           minLength: 0
@@ -622,9 +652,11 @@ components:
       properties:
         idImage:
           type: string
+          example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
           pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         Location:
           type: string
+          example: /images/a35f6dfa-69dc-11ed-a1eb-0242ac120002.png
           pattern: '^/images/[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}.png$'
         Time:
           type: string
@@ -636,6 +668,7 @@ components:
           minimum: 0
         Text:
           type: string
+          example: Text Image
           minLength: 1
           maxLength: 256
     completeImage:
@@ -644,9 +677,11 @@ components:
       properties:
         idImage:
           type: string
+          example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
           pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         Location:
           type: string
+          example: /images/a35f6dfa-69dc-11ed-a1eb-0242ac120002.png
           pattern: '^/images/[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}.png$'
         Time:
           type: string
@@ -668,6 +703,7 @@ components:
       properties:
         UserIdLike:
           type: string
+          example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
           pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         Time:
           type: string
@@ -677,11 +713,13 @@ components:
       properties:
         UserIdComment:
           type: string
+          example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
           pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         Time:
           type: string
         Content:
           type: string
+          example: Comment
           minLength: 0
           maxLength: 256
     ultraBasicProfile:
@@ -695,9 +733,11 @@ components:
           maxLength: 16
         Id:
           type: string
+          example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
           pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         ProfilePictureLocation:
           type: string
+          example: /images/a35f6dfa-69dc-11ed-a1eb-0242ac120002.png
           pattern: '^/images/[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}.png$'
     streamContent:
       title: The content of the stream object
@@ -705,9 +745,11 @@ components:
       properties:
         ImageId:
           type: string
+          example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
           pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
         ImageLocation:
           type: string
+          example: /images/a35f6dfa-69dc-11ed-a1eb-0242ac120002.png
           pattern: '^/images/[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}.png$'
         Time:
           type: string
@@ -721,6 +763,7 @@ components:
             $ref: "#/components/schemas/likes"
         Text:
           type: string
+          example: Text Image
           minLength: 1
           maxLength: 256
 
@@ -752,26 +795,32 @@ components:
     Search:
       schema:
         type: string
-        pattern: 'ˆ.*?$'
+        example: Maria
+        pattern: '^.*?$'
         minLength: 3
         maxLength: 16
-      name: search
+      name: Search
       required: true
       in: query
       description: Search for user by username
+      allowEmptyValue: false
     IdParam:
       schema:
         type: string
+        example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
         pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
       name: Id
       required: true
+      allowEmptyValue: false
       in: path
       description: Id of the user
     ImageIdParam:
       schema:
         type: string
+        example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
         pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
       name: ImageId
       required: true
+      allowEmptyValue: false
       in: path
       description: Id of the image
